@@ -1,5 +1,9 @@
 2008-04-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR fortran/35786
+	* gfortran.dg/gomp/pr35786-1.f90: New test.
+	* gfortran.dg/gomp/pr35786-2.f90: New test.
+
 	PR c++/35741
 	* g++.dg/other/offsetof5.C: New test.
 
